# HikariCore

./: .editorconfig  .gitmodules  CMakeLists.txt
include/: LegacyLowerSwitch.h  json.hpp  nanorand.h
include/Obfuscation/: AntiClassDump.h  BogusControlFlow.h  CryptoUtils.h  Flattening.h  FunctionCallObfuscate.h  FunctionWrapper.h  IndirectBranch.h  Obfuscation.h  Split.h  StringEncryption.h  Substitution.h  Utils.h
src/: CryptoUtils.cpp  LegacyLowerSwitch.cpp  PassScheduler.cpp  RegisterPass.cpp  Utils.cpp
src/Passes/: AntiClassDump.cpp  BogusControlFlow.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  Substitution.cpp
